chore: 자바 버전 원상복구 (11->8)